import groovy.json.JsonOutput
import groovy.json.JsonSlurper

plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.140'
    id 'idea'
    id 'org.jetbrains.gradle.plugin.idea-ext' version '1.1.6'
    id 'eclipse'
}

gradle.projectsEvaluated {
    layout.buildDirectory.dir('classes/java/gametest').get().asFile.mkdirs()
    layout.buildDirectory.dir('resources/gametest').get().asFile.mkdirs()
    layout.buildDirectory.dir('classes/java/datagen').get().asFile.mkdirs()
    layout.buildDirectory.dir('resources/datagen').get().asFile.mkdirs()
}

tasks.named('wrapper', Wrapper).configure {
    distributionType = Wrapper.DistributionType.BIN
}

configurations.configureEach {
    resolutionStrategy {
        force 'com.google.guava:guava:32.1.3-jre'
    }
}

def versionProps = new Properties()
file('version.properties').withInputStream { versionProps.load(it) }

def gradleProps = new Properties()
file('gradle.properties').withInputStream { gradleProps.load(it) }

def currentBuild = versionProps.getProperty('build_number')?.toInteger() ?: 0
def nextBuild = currentBuild + 1
def stage = versionProps.getProperty('stage') ?: ''
def baseVersion = versionProps.getProperty('version')
def newVersion = "${baseVersion}-b${nextBuild}-${stage}"

version = newVersion
ext.version_buildnumber = nextBuild
ext.stage = stage
ext.version_dualcodecs = versionProps.getProperty('version_dualcodecs') ?: '2.0.1'

println "-> build.gradle applying version: $version (build ${nextBuild})"

tasks.withType(Jar).configureEach {
    archiveVersion.set(newVersion)
}

group = 'mctmods.immersivetechnology'

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

tasks.withType(Jar).configureEach {
    zip64 = true
}

ext {
    mod_id = gradleProps['mod_id']
    version_minecraft = versionProps['version_mc']
    version_neoforge = versionProps['version_neoforge']
    version_jei = versionProps['version_jei']
    version_parchment = versionProps['version_parchment']
    version_ie = versionProps['version_ie']
    version_ic = versionProps.getProperty('version_ic', '[2.0,)')
    mod_license = gradleProps['mod_license']
    mod_name = gradleProps['mod_name']
    mod_authors = gradleProps['mod_authors']
    mod_description = gradleProps['mod_description']
}

def version_replaces = [
        'version'         : project.version,
        'build_number'    : version_buildnumber,
        'version_mc'      : version_minecraft,
        'version_neoforge': version_neoforge,
        'version_jei'     : version_jei,
        'mod_license'     : mod_license,
        'mod_name'        : mod_name,
        'mod_authors'     : mod_authors,
        'mod_description' : mod_description,
        'version_ie'      : version_ie,
        'version_ic'      : version_ic,
        'stage'           : stage,
]

sourceSets {
    main {
        java { srcDirs = ["$rootDir/src/main/java"] }
        resources {
            srcDirs = [
                    "$rootDir/src/main/resources",
                    "$rootDir/src/generated/resources",
            ]
        }
    }
    datagen {
        java { srcDirs = ["$rootDir/src/datagen/java"] }
        resources { srcDirs = ["$rootDir/src/datagen/resources"] }
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
    gametest {
        java { srcDirs = ["$rootDir/src/gametest/java"] }
        resources { srcDirs = ["$rootDir/src/gametest/resources"] }
        compileClasspath += main.compileClasspath
        runtimeClasspath += main.runtimeClasspath
        compileClasspath += main.output
        runtimeClasspath += main.output
    }
}

processResources {
    duplicatesStrategy = DuplicatesStrategy.FAIL
    inputs.properties(version_replaces)
    filesMatching("META-INF/*.mods.toml") {
        expand version_replaces
    }
    exclude ".cache"
    doLast {
        destinationDir.eachFileRecurse { File file ->
            if (file.file && (file.name.endsWith('.json') || file.name.endsWith('.mcmeta'))) {
                file.setText(JsonOutput.toJson(new JsonSlurper().parse(file, 'UTF-8')))
            }
        }
    }
}

tasks.register('copyModsTomlForIntelliJ', Copy) {
    from processResources.destinationDir
    into "$projectDir/out/production/resources"
    include "META-INF/neoforge.mods.toml", "META-INF/mods.toml"
    dependsOn processResources
}

def icJar = null
def icDir = file('../ImmersiveConvergence-21/build/libs')
def matchingJars = fileTree(icDir) {
    include "ImmersiveConvergence-${version_minecraft}-*-dev.jar"
    exclude "**/*-sources.jar"
}.files

if (!matchingJars.isEmpty()) {
    icJar = matchingJars.sort { a, b -> b.lastModified() <=> a.lastModified() }.last()
    logger.lifecycle("✅ Found IC deobf JAR: ${icJar.name}")
} else {
    logger.warn('⚠️  No IC deobf JAR found in ../ImmersiveConvergence-21/build/libs')
}

neoForge {
    version = project.version_neoforge

    parchment {
        mappingsVersion = project.version_parchment
        minecraftVersion = project.version_minecraft
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
            sourceSet sourceSets.datagen
            sourceSet sourceSets.gametest
        }
    }

    runs {
        client {
            client()
            programArguments.addAll '--username', 'tgstyle', '--width', '1920', '--height', '1080'
            jvmArgument("-Djava.library.path=/usr/lib64")
            environment 'LD_LIBRARY_PATH', '/usr/lib64'
        }

        server {
            server()
            programArguments.addAll '--nogui'
        }

        data {
            data()
            sourceSet = sourceSets.datagen
            programArguments.addAll '--mod', mod_id.toString(), '--all', '--output', file('src/generated/resources/').getAbsolutePath(), '--existing', file('src/main/resources/').getAbsolutePath()
        }

        gameTestServer {
            type = "gameTestServer"
        }

        configureEach {
            gameDirectory = project.file('run')
            systemProperty('neoforge.enabledGameTestNamespaces', mod_id.toString())
        }
    }
}

tasks.register('prepareGametestOutputs') {
    dependsOn gametestClasses, processResources
    doFirst {
        layout.buildDirectory.dir('classes/java/gametest').get().asFile.mkdirs()
        layout.buildDirectory.dir('resources/gametest').get().asFile.mkdirs()
    }
}

tasks.register('prepareDatagenOutputs') {
    dependsOn datagenClasses, processResources
    doFirst {
        layout.buildDirectory.dir('classes/java/datagen').get().asFile.mkdirs()
        layout.buildDirectory.dir('resources/datagen').get().asFile.mkdirs()
    }
}

afterEvaluate {
    tasks.named('runData').configure { dependsOn('prepareDatagenOutputs', 'prepareGametestOutputs') }
}

repositories {
    mavenCentral()
    maven { url = 'https://repo.spongepowered.org/repository/maven-public/' }
    maven { url = 'https://maven.blamejared.com' }
    maven { url = 'https://www.cursemaven.com' ; content { includeGroup "curse.maven" } }
    maven { url = "https://cfa2.cursemaven.com" ; content { includeGroup "curse.maven" } }
    maven { url = 'https://squiddev.cc/maven/' ; content { includeGroup("cc.tweaked"); includeModule("org.squiddev", "Cobalt") } }
    maven { name = 'ParchmentMC' ; url = 'https://ldtteam.jfrog.io/artifactory/parchmentmc-public/' }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

dependencies {
    implementation "mezz.jei:jei-${version_minecraft}-neoforge-api:${version_jei}"
    runtimeOnly  "mezz.jei:jei-${version_minecraft}-neoforge:${version_jei}"

    runtimeOnly "curse.maven:wayfix-1224888:7659637"
    runtimeOnly "curse.maven:cloth-config-348521:5729127"
    runtimeOnly "curse.maven:engineered-schematics-1207780:8308767"

    implementation "curse.maven:immersive-engineering-231951:6733669"
    implementation "blusunrize.immersiveengineering:ImmersiveEngineering:${version_ie}:datagen"

    implementation "curse.maven:jade-324717:7545219"
    implementation "curse.maven:the-one-probe-245211:7292875"

    if (icJar != null) {
        implementation files(icJar)
    } else {
        logger.warn('⚠️  Falling back to CurseMaven for ImmersiveConvergence')
    }

    jarJar(implementation("malte0811:DualCodecs")) {
        version {
            strictly "[${version_dualcodecs},1)"
            prefer "${version_dualcodecs}"
        }
    }
}

def customGradle = rootProject.file('custom.gradle')
if (customGradle.exists()) apply from: customGradle

tasks.register('bumpVersion') {
    def versionPropsFile = layout.projectDirectory.file('version.properties')
    inputs.file(versionPropsFile)
    outputs.upToDateWhen { false }

    doLast {
        def props = new Properties()
        versionPropsFile.asFile.withInputStream { props.load(it) }
        props['build_number'] = nextBuild.toString()
        versionPropsFile.asFile.withOutputStream { props.store(it, null) }
    }
}

tasks.register('datagenJar', Jar) {
    dependsOn datagenClasses
    archiveClassifier = 'datagen'
    from sourceSets.datagen.output
    manifest { attributes "FMLModType": "GAMELIBRARY" }
}

tasks.register('sourcesJar', Jar) {
    dependsOn classes
    archiveClassifier = 'sources'
    from sourceSets.main.allSource
    from sourceSets.datagen.allSource
}

artifacts {
    archives sourcesJar
    archives datagenJar
}

void minimizePNGFile(File file) {
    long size = file.length()
    ExecOperations execOps = project.services.get(ExecOperations)
    execOps.exec {
        executable 'optipng'
        args '-q', '-o7', '-zm1-9', '-strip', 'all', file.absolutePath
    }
    long newSize = file.length()
    if (newSize < size) {
        System.out.format("Reduced File size of %s from %d bytes to %d bytes (reduced by %.2f%%)\n",
                file, size, newSize, ((double) (size - newSize)) / ((double) size) * 100.0)
    }
}

tasks.register('optimizePng') {
    def pngPatterns = ["**/*.png"]
    doLast {
        for (dir in sourceSets.main.resources.srcDirs) {
            fileTree(dir: dir, includes: pngPatterns).each { minimizePNGFile(it) }
        }
    }
}

processResources.dependsOn bumpVersion
jar.dependsOn bumpVersion
datagenJar.dependsOn bumpVersion
sourcesJar.dependsOn bumpVersion

tasks.register('genIntellijRunsDummy') {}

jar {
    archiveBaseName.set("MCT-ImmersiveTechnology-${version_minecraft}")
    archiveClassifier.set('')
}

tasks.withType(JavaCompile).configureEach { options.encoding = 'UTF-8' }

idea { module { downloadSources = true; downloadJavadoc = true } }

publishing {
    publications { register('mavenJava', MavenPublication) { from(components.java as SoftwareComponent) }}
    repositories { maven { url = "file://${project.projectDir}/repo" } }
}

build.dependsOn bumpVersion
